--- a/haskell/packages/hello-cabal/hello-world.cabal
+++ b/haskell/packages/hello-cabal/hello-world.cabal
@@ -4,16 +4,16 @@ version:       1.0.0.0
 build-type:    Simple
 
 source-repository head
-    type:     git
-    location: https://github.com/altersabeh/hello-world
+  type:     git
+  location: https://github.com/altersabeh/hello-world
 
 executable hello-haskell
-    main-is:          Main.hs
-    hs-source-dirs:   app
-    other-modules:    Paths_hello_world
-    autogen-modules:  Paths_hello_world
-    default-language: GHC2021
-    ghc-options:      -Wall
-    build-depends:
-        base ^>=4.18.2.0,
-        haskell-hello:hello-world
+  main-is:          Main.hs
+  hs-source-dirs:   app
+  other-modules:    Paths_hello_world
+  autogen-modules:  Paths_hello_world
+  default-language: GHC2021
+  ghc-options:      -Wall
+  build-depends:
+    , base                       >=4.18.2.0
+    , haskell-hello:hello-world
