--- a/haskell/packages/numbers-utils/numbers-utils.cabal
+++ b/haskell/packages/numbers-utils/numbers-utils.cabal
@@ -4,73 +4,73 @@ version:       1.0.0.0
 build-type:    Simple
 
 source-repository head
-    type:     git
-    location: https://github.com/altersabeh/hello-world
+  type:     git
+  location: https://github.com/altersabeh/hello-world
 
 library
-    exposed-modules:
-        Numbers.Utils.Operations.FactorUtils
-        Numbers.Utils.Operations.FactorialUtils
-        Numbers.Utils.Operations.FibonacciUtils
+  exposed-modules:
+    Numbers.Utils.Operations.FactorialUtils
+    Numbers.Utils.Operations.FactorUtils
+    Numbers.Utils.Operations.FibonacciUtils
 
-    hs-source-dirs:   src
-    other-modules:    Paths_numbers_utils
-    autogen-modules:  Paths_numbers_utils
-    default-language: GHC2021
-    ghc-options:      -Wall
-    build-depends:
-        base ^>=4.18.2.0,
-        random ^>=1.2.1.2,
-        arithmoi ^>=0.13.0.0
+  hs-source-dirs:   src
+  other-modules:    Paths_numbers_utils
+  autogen-modules:  Paths_numbers_utils
+  default-language: GHC2021
+  ghc-options:      -Wall
+  build-depends:
+    , arithmoi  >=0.13.0.0
+    , base      >=4.18.2.0
+    , random    >=1.2.1.2
 
 executable factor
-    main-is:          Factor.hs
-    hs-source-dirs:   app
-    other-modules:    Paths_numbers_utils
-    autogen-modules:  Paths_numbers_utils
-    default-language: GHC2021
-    ghc-options:      -Wall
-    build-depends:
-        base ^>=4.18.2.0,
-        numbers-utils
+  main-is:          Factor.hs
+  hs-source-dirs:   app
+  other-modules:    Paths_numbers_utils
+  autogen-modules:  Paths_numbers_utils
+  default-language: GHC2021
+  ghc-options:      -Wall
+  build-depends:
+    , base           >=4.18.2.0
+    , numbers-utils
 
 executable factorial
-    main-is:          Factorial.hs
-    hs-source-dirs:   app
-    other-modules:    Paths_numbers_utils
-    autogen-modules:  Paths_numbers_utils
-    default-language: GHC2021
-    ghc-options:      -Wall
-    build-depends:
-        base ^>=4.18.2.0,
-        numbers-utils
+  main-is:          Factorial.hs
+  hs-source-dirs:   app
+  other-modules:    Paths_numbers_utils
+  autogen-modules:  Paths_numbers_utils
+  default-language: GHC2021
+  ghc-options:      -Wall
+  build-depends:
+    , base           >=4.18.2.0
+    , numbers-utils
 
 executable fibonacci
-    main-is:          Fibonacci.hs
-    hs-source-dirs:   app
-    other-modules:    Paths_numbers_utils
-    autogen-modules:  Paths_numbers_utils
-    default-language: GHC2021
-    ghc-options:      -Wall
-    build-depends:
-        base ^>=4.18.2.0,
-        numbers-utils
+  main-is:          Fibonacci.hs
+  hs-source-dirs:   app
+  other-modules:    Paths_numbers_utils
+  autogen-modules:  Paths_numbers_utils
+  default-language: GHC2021
+  ghc-options:      -Wall
+  build-depends:
+    , base           >=4.18.2.0
+    , numbers-utils
 
 test-suite operations-test
-    type:             exitcode-stdio-1.0
-    main-is:          OperationsTests.hs
-    hs-source-dirs:   tests
-    other-modules:
-        Operations.FactorUtilsTests
-        Operations.FactorialUtilsTests
-        Operations.FibonacciUtilsTests
+  type:             exitcode-stdio-1.0
+  main-is:          OperationsTests.hs
+  hs-source-dirs:   tests
+  other-modules:
+    Operations.FactorialUtilsTests
+    Operations.FactorUtilsTests
+    Operations.FibonacciUtilsTests
 
-    default-language: GHC2021
-    ghc-options:      -Wall
-    build-depends:
-        base ^>=4.18.2.0,
-        numbers-utils,
-        random ^>=1.2.1.2,
-        tasty ^>=1.4.3,
-        tasty-hunit ^>=0.10.1,
-        time ^>=1.12.2
+  default-language: GHC2021
+  ghc-options:      -Wall
+  build-depends:
+    , base           >=4.18.2.0
+    , numbers-utils
+    , random         >=1.2.1.2
+    , tasty          >=1.4.3
+    , tasty-hunit    >=0.10.1
+    , time           >=1.12.2
