--- a/haskell/packages/translator/translator.cabal
+++ b/haskell/packages/translator/translator.cabal
@@ -4,29 +4,29 @@ version:       1.0.0.0
 build-type:    Simple
 
 source-repository head
-    type:     git
-    location: https://github.com/altersabeh/hello-world
+  type:     git
+  location: https://github.com/altersabeh/hello-world
 
 library
-    exposed-modules:  Translator
-    hs-source-dirs:   src
-    other-modules:    Paths_translator
-    autogen-modules:  Paths_translator
-    default-language: GHC2021
-    ghc-options:      -Wall
-    build-depends:
-        base ^>=4.18.2.0,
-        containers ^>=0.6.7
+  exposed-modules:  Translator
+  hs-source-dirs:   src
+  other-modules:    Paths_translator
+  autogen-modules:  Paths_translator
+  default-language: GHC2021
+  ghc-options:      -Wall
+  build-depends:
+    , base        >=4.18.2.0
+    , containers  >=0.6.7
 
 test-suite translator-test
-    type:             exitcode-stdio-1.0
-    main-is:          TranslatorTests.hs
-    hs-source-dirs:   tests
-    default-language: GHC2021
-    ghc-options:      -Wall
-    build-depends:
-        base ^>=4.18.2.0,
-        translator,
-        tasty ^>=1.4.3,
-        tasty-hunit ^>=0.10.1,
-        time ^>=1.12.2
+  type:             exitcode-stdio-1.0
+  main-is:          TranslatorTests.hs
+  hs-source-dirs:   tests
+  default-language: GHC2021
+  ghc-options:      -Wall
+  build-depends:
+    , base         >=4.18.2.0
+    , tasty        >=1.4.3
+    , tasty-hunit  >=0.10.1
+    , time         >=1.12.2
+    , translator
